@@ -1,3 +1,6 @@
+04/17/16:
+	Theme error message about CGI running as root	
+
 03/19/15:
 	Fix CSS/CGI paths when using Live in non-root dir (experimental)
 
